Major Update 90% Complete
Major Update 90% Complete. Debugged the first run. Make final changes by next week

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ Municipalities Maps/
 NJScrapper Notes 10-16-23 .txt
 NJScrapper Notes 11-6-23 .txt
 scrap paper.py
+Logs/
+Saved Data/
+Old Codes/
+Area_Search_Update.py
+NJR10kZips/
