Commit to update recent changes, upload pictures for ReadMe

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ Saved Data/
 Old Codes/
 Area_Search_Update.py
 NJR10kZips/
+credentials.json
+gmail-quickstart.py
+NJRScrapper Notes.txt
+scrap paper.py
+send_email.py
+token.json
+Update_Dictionaries.py
