--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ scrap paper.py
 send_email.py
 token.json
 Update_Dictionaries.py
+NJRScrapper Notes.txt
+NJ Realtor Project Documentation.txt
+NJ Realtor Project Documentation.docx
+NJRealtors_ML_Project
